Wrapped container div with table-cell div

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/index.html.twig
@@ -42,7 +42,8 @@
         </div>
 
         <div class="display-table-row">
-            <div id="container" class="display-table-cell">
+            <div class="display-table-cell" style="height:100%">
+            <div id="container">
                 <div id="left">
                     <div id="menu">
                         <div class="viewport">
@@ -87,6 +88,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
             </div>
         </div>
 
