--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
@@ -75,28 +75,28 @@
     {% if udi is null %}
         {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
     {% else %}
-        {% if datasetSubmission is null %}
+        {% if dataset is null %}
             <div class="messages warning">
                 <h2 class="element-invisible">Status message</h2>
                 Sorry, the dataset with Unique Dataset Identifier (UDI) {{ udi }} could not be found. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
+            </div>
+            {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
+        {% elseif dataset.dif.status == constant('Pelagos\\Entity\\DIF::STATUS_SUBMITTED') %}
+            <div class="messages warning">
+                <h2 class="element-invisible">Status message</h2>
+                The DIF has not yet been approved for dataset: {{ udi }}. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
+            </div>
+            {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
+        {% elseif dataset.dif.status == constant('Pelagos\\Entity\\DIF::STATUS_UNSUBMITTED') %}
+            <div class="messages warning">
+                <h2 class="element-invisible">Status message</h2>
+                The DIF has not yet been submitted for dataset: {{ udi }}. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
             </div>
             {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
         {% elseif not is_granted('CAN_CREATE', datasetSubmission) and not is_granted('CAN_EDIT', datasetSubmission) %}
             <div class="messages warning">
                     <h2 class="element-invisible">Status message</h2>
                     Sorry, but you can only create or edit dataset submissions for datasets associated with your research groups.
-            </div>
-            {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
-        {% elseif datasetSubmission.dataset.dif.status == constant('Pelagos\\Entity\\DIF::STATUS_SUBMITTED') %}
-            <div class="messages warning">
-                <h2 class="element-invisible">Status message</h2>
-                The DIF has not yet been approved for dataset: {{ udi }}. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
-            </div>
-            {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
-        {% elseif datasetSubmission.dataset.dif.status == constant('Pelagos\\Entity\\DIF::STATUS_UNSUBMITTED') %}
-            <div class="messages warning">
-                <h2 class="element-invisible">Status message</h2>
-                The DIF has not yet been submitted for dataset: {{ udi }}. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
             </div>
             {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
         {% elseif datasetSubmission.status == constant('Pelagos\\Entity\\DatasetSubmission::STATUS_COMPLETE')
