--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/summary.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/summary.html.twig
@@ -61,7 +61,7 @@
         <td>
             <b>Last Update:</b><br>
             {% if dataset.datasetSubmission %}
-            {{ dataset.datasetSubmission.creationTimeStamp|date('M d Y H:i T', 'UTC') }}
+            {{ dataset.datasetSubmission.submissionTimeStamp|date('M d Y H:i T', 'UTC') }}
             {% else %}
             {{ dataset.dif.modificationTimeStamp|date('M d Y H:i T', 'UTC') }}
             {% endif %}
