Changed text area height of parameters.
Allow resizing of textarea.

--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-submission.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-submission.css
@@ -50,11 +50,7 @@ input[type=text],select,textarea {
 }
 
 textarea{
-    resize: none
-}
-
-textarea#abstract {
-    height:20em;
+    resize: vertical;
 }
 
 .tab-table tr:nth-child(even) {
