Trapped error when field validation fails. Renamed action in form to prevent submit button causing an submit.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/template/forms/DataRepository.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/template/forms/DataRepository.html.twig
@@ -2,7 +2,7 @@
 {% if is_granted('CAN_EDIT', DataRepository) %}
  editable
 {% endif %}
-action="{{path('pelagos_api_data_repositories_get_collection')}}">
+_action="{{path('pelagos_api_data_repositories_get_collection')}}">
 
     <input type="hidden" name="id" value="{{DataRepository.getId}}">
 
