--- a/src/Pelagos/Bundle/AppBundle/Resources/views/template/forms/Person.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/template/forms/Person.html.twig
@@ -1,6 +1,6 @@
 <form class="entityForm" entityType="Person"
 {% include '@templates/forms/permissionsBlock.html.twig' with {'Entity': Person} %}
-action="{{path('pelagos_api_people_post')}}">
+_action="{{path('pelagos_api_people_post')}}">
 
     {{ form_widget(form) }}
 
