--- a/src/Pelagos/Bundle/AppBundle/Resources/views/template/forms/ResearchGroup.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/template/forms/ResearchGroup.html.twig
@@ -1,6 +1,6 @@
 <form class="entityForm" entityType="ResearchGroup"
 {% include '@templates/forms/permissionsBlock.html.twig' with {'Entity': ResearchGroup} %}
-action="{{path('pelagos_api_research_groups_post')}}">
+_action="{{path('pelagos_api_research_groups_post')}}">
 
     {{ form_row(form.id) }}
 
