--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/dif.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/dif.html.twig
@@ -151,7 +151,7 @@
                     <tr>
                         <td height="100%">
                             <div style="position:relative;height:100%;overflow:auto;">
-                                <div id="diftree" class="diftree">
+                                <div id="diftree" class="diftree" data-research-groups="{{ research_groups }}">
                                     <a class="jstree-anchor" href="#">
                                         {% image '@PelagosAppBundle/Resources/public/images/throbber.gif' %}
                                         <img id="imgthrobber" src="{{ asset_url }}">
