Changed action to _action in FundingCycle form template

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/template/forms/FundingCycle.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/template/forms/FundingCycle.html.twig
@@ -1,6 +1,6 @@
 <form class="entityForm" entityType="FundingCycle"
 {% include '@templates/forms/permissionsBlock.html.twig' with {'Entity': FundingCycle} %}
-action="{{path('pelagos_api_funding_cycles_post')}}">
+_action="{{path('pelagos_api_funding_cycles_post')}}">
 
     {{ form_widget(form) }}
 
