--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/dif.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/dif.html.twig
@@ -150,7 +150,7 @@
                     </tr>
                     <tr>
                         <td height="100%">
-                            <div style="position:relative;height:100%;overflow:auto;">
+                            <div style="position:relative;height:100%;">
                                 <div id="diftree" class="diftree">
                                     <a class="jstree-anchor" href="#">
                                         {% image '@PelagosAppBundle/Resources/public/images/throbber.gif' %}
