--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/dataset_details.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/dataset_details.html.twig
@@ -2,7 +2,7 @@
     {% if dataset.datasetSubmission and dataset.datasetSubmission.authors%}
         <div class="attr"><span class="attr">Dataset Author(s):</span> {{dataset.datasetSubmission.authors}}</div>
     {% endif %}
-    <div class="attr"><span class="attr">Primary Point of Contact:</span> {{dataset.dif.primaryPointOfContact.LastName}}, {{dataset.dif.primaryPointOfContact.FirstName}}</div>
+    <div class="attr"><span class="attr">Primary Point of Contact:</span> {{dataset.primaryPointOfContact.LastName|default}}, {{dataset.primaryPointOfContact.FirstName|default}}</div>
     {% if dataset.dif.secondaryPointOfContact %}
         <div class="attr"><span class="attr">Secondary Point of Contact:</span> {{dataset.dif.secondaryPointOfContact.LastName}}, {{dataset.dif.secondaryPointOfContact.FirstName}}</div>
     {% endif %}
