--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/dataset-contact.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/dataset-contact.html.twig
@@ -1,46 +1,57 @@
 <fieldset>
-    <legend>Dataset Contact</legend>
-    <table class="tab-table">
-        {% set contact = form.datasetContacts | first %}
-        <tr>
-            <td>
-				<span class="helpSection">
-					{% image '@PelagosAppBundle/Resources/public/images/info32.png' %}
-					<img class="info" src="{{ asset_url }}">
-					{% endimage %}
-					<div class="tooltiptext">
-                        Please use the drop down list to select the person who can be contacted
-                        about the dataset. If the person is not listed or their contact information
-                        is incorrect, please contact griidc@gomri.org.
-					</div>
-				</span>
-                <label for="datasetcontact">Person</label>
-                <select class="contactperson" id="contactperson" name="{{contact.person.vars.full_name}}" required="required">
-                    {% if contact.vars.data.person|default %}
-                    <option selected value="{{contact.vars.data.person.id}}">
-                        {{contact.vars.data.person.lastName}}, {{contact.vars.data.person.firstName}}, {{contact.vars.data.person.emailAddress}}
-                    </option>
+    <legend>Dataset Contacts</legend>
+    <div id="dataset-contacts">
+        {% for contact in form.datasetContacts %}
+        <table class="tab-table dataset-contacts">
+            <tr>
+                <td>
+                    <span class="helpSection">
+                        {% image '@PelagosAppBundle/Resources/public/images/info32.png' %}
+                        <img class="info" src="{{ asset_url }}">
+                        {% endimage %}
+                        <div class="tooltiptext">
+                            Please use the drop down list to select the person who can be contacted
+                            about the dataset. If the person is not listed or their contact information
+                            is incorrect, please contact griidc@gomri.org.
+                        </div>
+                    </span>
+                    {% if loop.first %}
+                    <label for="datasetcontact">Primary Person</label>
+                    {% else %}
+                    <label for="datasetcontact">Additional Person</label>
                     {% endif %}
-                </select>
-                <label for="contactperson" class="error"></label>
-                {% include "PelagosAppBundle:DatasetSubmission:contact-information.html.twig" %}
-			</td>
-        </tr>
-        <tr>
-            <td>
-				<span class="helpSection">
-					{% image '@PelagosAppBundle/Resources/public/images/info32.png' %}
-					<img class="info" src="{{ asset_url }}">
-					{% endimage %}
-					<div class="tooltiptext">
-                        Please select the person’s relationship to the dataset from the drop down
-                        list.
-					</div>
-				</span>
-                {{ form_row(contact.role) }}
-            </td>
-        </tr>
+                    <select class="contactperson" id="contactperson" name="{{contact.person.vars.full_name}}" required="required">
+                        {% if contact.vars.data.person|default %}
+                        <option selected value="{{contact.vars.data.person.id}}">
+                            {{contact.vars.data.person.lastName}}, {{contact.vars.data.person.firstName}}, {{contact.vars.data.person.emailAddress}}
+                        </option>
+                        {% endif %}
+                    </select>
+                    <label for="contactperson" class="error"></label>
+                    {% include "PelagosAppBundle:DatasetSubmission:contact-information.html.twig" %}
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <span class="helpSection">
+                        {% image '@PelagosAppBundle/Resources/public/images/info32.png' %}
+                        <img class="info" src="{{ asset_url }}">
+                        {% endimage %}
+                        <div class="tooltiptext">
+                            Please select the person’s relationship to the dataset from the drop down
+                            list.
+                        </div>
+                    </span>
+                    {{ form_row(contact.role) }}
+                </td>
+            </tr>
+        </table>
+        {% endfor %}
+        <button type="button" id="btnAddContact">Add New</button>
+        <button type="button" id="btnDeleteContact">Delete This</button>
+    </div>
 
+    <table class="tab-table">
         <tr>
             <td>
 				<span class="helpSection">
