Fixed add remove behaviour. Simplified prototype add.
TODO: Add hidden field form for personContact ID.

--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-submission.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-submission.css
@@ -157,3 +157,10 @@ table.dataTable.stripe tbody tr:hover {
 {
     display: none;
 }
+
+.blabla
+{
+    outline:2px solid rgba(255,0,0,0.5);
+    padding:2px;
+    opacity:.7;
+}
