--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/dataset-contact.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/dataset-contact.html.twig
@@ -2,6 +2,7 @@
     <legend>Dataset Contacts</legend>
     <div id="dataset-contacts">
         {% for contact in form.datasetContacts %}
+        Contact ID:{{contact.vars.data.id}}<br>
         <table class="tab-table dataset-contacts">
             <tr>
                 <td>
@@ -15,6 +16,16 @@
                             is incorrect, please contact griidc@gomri.org.
                         </div>
                     </span>
+                    {% if not loop.first %}
+                    <span class="deletebutton">
+                        {% image '@PelagosAppBundle/Resources/public/images/delete.png' %}
+                        <img class="info" src="{{ asset_url }}">
+                        {% endimage %}
+                        <div class="tooltiptext">
+                            Click to delete this contact.
+                        </div>
+                    </span>
+                    {% endif %}
                     {% if loop.first %}
                     <label for="datasetcontact">Primary Person</label>
                     {% else %}
@@ -47,11 +58,15 @@
             </tr>
         </table>
         {% endfor %}
-        {% image '@PelagosAppBundle/Resources/public/images/add.png' %}
-            <img id="addContact" src="{{asset_url}}">
-        {% endimage %}<br>
-        <button type="button" id="btnDeleteContact">Delete last Contact (i'm only here for debug!)</button>
     </div>
+    <span class="addbutton">
+        {% image '@PelagosAppBundle/Resources/public/images/add.png' %}
+        <img class="info" id="addContact" src="{{asset_url}}">
+        {% endimage %}
+        <div class="tooltiptext">
+            Click to add a contact.
+        </div>
+    </span>
 
     <table class="tab-table">
         <tr>
@@ -70,3 +85,54 @@
         </tr>
     </table>
 </fieldset>
+<div id="contact-prototype" style="display:none;">
+    {% set contact = form.datasetContacts.vars.prototype %}
+    <table class="tab-table dataset-contacts">
+        <tr>
+            <td>
+                <span class="helpSection">
+                    {% image '@PelagosAppBundle/Resources/public/images/info32.png' %}
+                    <img class="info" src="{{ asset_url }}">
+                    {% endimage %}
+                    <div class="tooltiptext">
+                        Please use the drop down list to select the person who can be contacted
+                        about the dataset. If the person is not listed or their contact information
+                        is incorrect, please contact griidc@gomri.org.
+                    </div>
+                </span>
+                <span class="deletebutton">
+                    {% image '@PelagosAppBundle/Resources/public/images/delete.png' %}
+                    <img class="info" src="{{ asset_url }}">
+                    {% endimage %}
+                    <div class="tooltiptext">
+                        Click to delete this contact.
+                    </div>
+                </span>
+                <label for="datasetcontact">Additional Person</label>
+                <select class="contactperson" id="contactperson" name="{{contact.person.vars.full_name}}" required="required">
+                    {% if contact.vars.data.person|default %}
+                    <option selected value="{{contact.vars.data.person.id}}">
+                        {{contact.vars.data.person.lastName}}, {{contact.vars.data.person.firstName}}, {{contact.vars.data.person.emailAddress}}
+                    </option>
+                    {% endif %}
+                </select>
+                <label for="contactperson" class="error"></label>
+                {% include "PelagosAppBundle:DatasetSubmission:contact-information.html.twig" %}
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <span class="helpSection">
+                    {% image '@PelagosAppBundle/Resources/public/images/info32.png' %}
+                    <img class="info" src="{{ asset_url }}">
+                    {% endimage %}
+                    <div class="tooltiptext">
+                        Please select the person’s relationship to the dataset from the drop down
+                        list.
+                    </div>
+                </span>
+                {{ form_row(contact.role) }}
+            </td>
+        </tr>
+    </table>
+</div>
