Fixed qTip, delete button and buttons.

--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-submission.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-submission.css
@@ -39,6 +39,7 @@
 
 .tab-table {
     width: 100%;
+    margin: 2px;
 }
 
 .tab-table td {
@@ -158,9 +159,14 @@ table.dataTable.stripe tbody tr:hover {
     display: none;
 }
 
-.blabla
+.delete-contact
 {
     outline:2px solid rgba(255,0,0,0.5);
     padding:2px;
     opacity:.7;
+}
+
+#contact-prototype
+{
+    display:none;
 }
