Updated tooltip for Data Parameters and Units' section.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/difForm.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/difForm.html.twig
@@ -189,7 +189,7 @@
             <img class="info" src="{{ asset_url }}">
             {% endimage %}
             <div class="tooltiptext">
-                <p>Please expand on information you have provided in the abstract by giving more exact details about all variables or phenomena that you plan to measure, collect or generate. Please separate list items using a comma. </p>
+                <p>Please provide a coma separated list of the data parameters and units used in the abstract.</p>
             </div>
         </span>
         {{ form_row(form.variablesObserved) }}
