verbage change per review

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/difForm.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/difForm.html.twig
@@ -189,7 +189,7 @@
             <img class="info" src="{{ asset_url }}">
             {% endimage %}
             <div class="tooltiptext">
-                <p>Please provide a comma separated list of the data parameters and units used in the abstract.</p>
+                <p>Please provide a comma separated list of the data parameters or variables with units that will be included in the dataset.</p>
             </div>
         </span>
         {{ form_row(form.variablesObserved) }}
