Added primaryContact to prototype, removed test CheckboxType

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/dataset-contact.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/dataset-contact.html.twig
@@ -99,6 +99,7 @@
                 </select>
                 <label for="{{contact.person.vars.full_name}}" class="error"></label>
                 {% include "PelagosAppBundle:DatasetSubmission:contact-information.html.twig" %}
+                {{ form_widget(contact.primaryContact) }}
             </td>
         </tr>
         <tr>
