Missed a double quote

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/dataset-contact.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/dataset-contact.html.twig
@@ -2,7 +2,7 @@
     <legend>Dataset Contacts</legend>
     <div id="dataset-contacts">
         {% for contact in form.datasetContacts %}
-        <table class="tab-table dataset-contacts" index="{{contact.vars.name}}>
+        <table class="tab-table dataset-contacts" index="{{contact.vars.name}}">
             <tr>
                 <td>
                     <span class="helpSection">
