Set default value of checkbox to false.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/dataset-contact.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/dataset-contact.html.twig
@@ -113,7 +113,7 @@
                         list.
                     </div>
                 </span>
-                {{ form_row(contact.role, {"attr": {"class": "prototype", "disabled": "disabled"}}) }}
+                {{ form_row(contact.role, {"attr": {"class": "prototype", "disabled": "disabled", "data": false}}) }}
             </td>
         </tr>
     </table>
