Changed data discovery expand details to show correct point of contact.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DataDiscovery/dataset_details.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DataDiscovery/dataset_details.html.twig
@@ -9,12 +9,10 @@
 {% if dataset.datasetSubmission.authors | default %}
     <div class="attr"><span class="attr">Dataset Author(s):</span> {{ dataset.datasetSubmission.authors }}</div>
 {% endif %}
-{% if dataset.datasetSubmission.pointOfContactName | default %}
+{% if dataset.primaryPointOfContact | default %}
     <div class="attr">
-        <span class="attr">Point of Contact:</span> {{ dataset.datasetSubmission.pointOfContactName }}
-{% if dataset.datasetSubmission.pointOfContactEmail | default %}
-        (<a href="mailto:{{ dataset.datasetSubmission.pointOfContactEmail }}">{{ dataset.datasetSubmission.pointOfContactEmail }}</a>)
-{% endif %}
+        <span class="attr">Point of Contact:</span> {{ dataset.primaryPointOfContact.firstName }} {{ dataset.primaryPointOfContact.lastName }}
+        (<a href="mailto:{{ dataset.primaryPointOfContact.emailAddress }}">{{ dataset.primaryPointOfContact.emailAddress }}</a>)
     </div>
 {% endif %}
 
