--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/dataset_details.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/dataset_details.html.twig
@@ -2,7 +2,7 @@
     {% if dataset.datasetSubmission and dataset.datasetSubmission.authors%}
         <div class="attr"><span class="attr">Dataset Author(s):</span> {{dataset.datasetSubmission.authors}}</div>
     {% endif %}
-    <div class="attr"><span class="attr">Primary Point of Contact:</span> {{dataset.primaryPointOfContact.LastName|default}}, {{dataset.primaryPointOfContact.FirstName|default}}</div>
+    <div class="attr"><span class="attr">Primary Point of Contact:</span> {{dataset.primaryPointOfContact.lastName|default}}, {{dataset.primaryPointOfContact.firstName|default}}</div>
     <div class="abstract">
         <div><span class="attr">Abstract:</span></div>
         <div>{{dataset.abstract | slice(0,500)}}{% if dataset.abstract|length > 500 %}...{% endif %}</div>
