Display DOI in submit screen, now comes from Dataset.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/submit.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/submit.html.twig
@@ -77,7 +77,7 @@ Thank you for your submission. Please email <a href="mailto:griidc@gomri.org?sub
                 <b>DOI:</b>
             </td>
             <td>
-                {{ DatasetSubmission.getDoi }}
+                {{ DatasetSubmission.Dataset.Doi|default }}
             </td>
         </tr>
         <tr>
